--- a/backend-sma/package.json
+++ b/backend-sma/package.json
@@ -14,16 +14,22 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "nodemon": "^3.1.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.4",
+    "pdfkit": "^0.17.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.23.4",
     "nodemon": "^3.1.4",
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "swagger-typescript-api": "^13.2.13"
   }
 }
